<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.signup.register.RegisterFragment">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_full_name"
        android:layout_width="0dp"
        android:layout_height="80dp"
       app:layout_constraintBottom_toTopOf="@id/spin_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_full_name"
            android:layout_width="match_parent"
            android:hint="@string/text_full_name"
            android:textSize="15sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:background="@color/white"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/lbl_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_gender"
        app:layout_constraintTop_toTopOf="@id/spin_gender"
        app:layout_constraintBottom_toBottomOf="@id/spin_gender"
        app:layout_constraintRight_toLeftOf="@id/spin_gender"
        app:layout_constraintStart_toStartOf="@id/txt_input_username"
        android:textStyle="bold"
        android:textColor="?attr/colorAccent"
        android:textSize="16sp"


        />

    <Spinner
        android:id="@+id/spin_gender"
        android:layout_width="0dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toTopOf="@id/txt_input_username"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_username"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/txt_input_full_name"
        app:layout_constraintStart_toStartOf="@id/txt_input_full_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:singleLine="true"
            android:textSize="20sp"
            android:background="@color/white"

            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_password"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/txt_input_username"
        app:layout_constraintStart_toStartOf="@id/txt_input_username"
        app:layout_constraintEnd_toEndOf="@id/txt_input_username"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="16dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_register_password"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:textSize="20sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:inputType="textPassword"
            android:background="@color/white"

            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register_regist"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:text="@string/register"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/txt_input_password"
        app:layout_constraintStart_toStartOf="@id/txt_input_password"
        app:layout_constraintEnd_toEndOf="@id/txt_input_password"
        android:textAllCaps="false"

        />
    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/pb_loading"
        style="@style/SpinKitView.Large.Wave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:SpinKit_Color="?attr/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/btn_register_regist"
        app:layout_constraintStart_toStartOf="@id/btn_register_regist"
        app:layout_constraintEnd_toEndOf="@id/btn_register_regist"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        />



</androidx.constraintlayout.widget.ConstraintLayout>