<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".ui.signup.login.LoginFragment">




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_username"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toTopOf="@id/txt_input_password"
        android:layout_marginHorizontal="16dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:hint="@string/lgn_username"
            android:textSize="20sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="5dp"
            android:background="@color/white"

            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/txt_input_username"
        app:layout_constraintEnd_toEndOf="@id/txt_input_username"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        app:passwordToggleEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:hint="@string/lgn_password"
            android:textSize="20sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="5dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>




    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/txt_input_password"
        app:layout_constraintStart_toStartOf="@id/txt_input_password"
        app:layout_constraintTop_toBottomOf="@id/txt_input_password" />


    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/pb_loading"
        style="@style/SpinKitView.Large.Wave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:SpinKit_Color="?attr/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="@id/btn_login"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>