<resources>
    <string name="app_name">My Diabetes</string>
    <string name="login">Masuk</string>
    <string name="tab_Sign_in">Masuk</string>
    <string name="tab_Sign_up">Daftar</string>

    <string name="tab_news">Berita</string>
    <string name="tab_favorite">Favorit</string>


    <string name="username">Nama Pengguna</string>
    <string name="password">Kata Sandi</string>
    <string name="lgn_username">Nama Pengguna</string>
    <string name="lgn_password">Kata Sandi</string>
    <string name="register">Daftar</string>
    <string name="text_full_name">Nama Lengkap</string>


    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="age_array">
        <item>20-35 Tahun</item>
        <item>36-45 Tahun</item>
        <item>46-55 Tahun</item>
        <item>56-65 Tahun</item>
        <item>Di Atas 65 Tahun</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_dashboard">Dashboard</string>
    <string name="title_history">Likelihood Prediction</string>
    <string name="title_profile">Profile</string>
    <string name="empty">Field tidak boleh kosong</string>
    <string name="fab_content_desc">Mulai Diagnosis</string>

    <string name="gender">Jenis Kelamin anda?</string>

    <string name="progress_text">%1$d / %2$d </string>
    <string name="label_age">Age</string>
    <string name="label_gender">Jenis Kelamin</string>
    <string name="label_polyuria">Polyuria</string>
    <string name="label_polydipsia">Polydipsia</string>
    <string name="label_polyphagia">Polyphagia</string>
    <string name="label_swl">Sudden Weight Loss</string>
    <string name="label_partialParesis">Partial Paresis</string>
    <string name="label_visualBlurring">Visual Blurring</string>
    <string name="label_delayedHealing">Delayed Healing</string>
    <string name="label_weakness">Weakness</string>
    <string name="label_alopecia">Alopecia</string>
    <string name="label_muscleStiffness">Muscle stiffness</string>
    <string name="label_genitalThrush">Genital Thrush</string>
    <string name="label_itching">Itching</string>
    <string name="label_irritability">Irritability</string>
    <string name="label_obesity">Obesity</string>
    <string name="label_name">Nama</string>
    <string name="label_class">Class</string>
    <string name="no_data">Data kosong</string>
    <string name="label_title">Title</string>
    <string name="label_lorem">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</string>
    <string name="label_information">Hasil Deteksi Dini Diabetes adalah %1$s. %2$s </string>
    <string name="label_positive">Anda mungkin menderita Diabetes. Silakan berkonsultasi dengan Dokter. </string>
    <string name="label_negative">Anda tidak menderita Diabetes. Silakan berkonsultasi dengan Dokter untuk verifikasi. </string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="register_sukses">Sukses Daftar!</string>
    <string name="label_Age">Age</string>
</resources>